objects/Docusign_Settings__c.object
<CustomObject>
    <fields>
        <fullName>DSXPartnerApplication__c</fullName>
        <description>Version of DocuSign</description>
        <label>DSXPartnerApplication</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailBody__c</fullName>
        <label>Email Body</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>Email Subject</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IntegratorKey__c</fullName>
        <label>IntegratorKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendDocuSignMessageFromAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox controls whether the trigger on attachments sends a message/document request to DocuSign on insert.</description>
        <inlineHelpText>This checkbox controls whether the trigger on attachments sends a message/document request to DocuSign on insert.</inlineHelpText>
        <label>Send DocuSign Message From Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendDocuSignMessageFromFiles__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox controls whether the trigger on files (ContentDocumentLink) sends a message/document request to DocuSign on insert.</description>
        <inlineHelpText>This checkbox controls whether the trigger on files (ContentDocumentLink) sends a message/document request to DocuSign on insert.</inlineHelpText>
        <label>Send DocuSign Message from Files</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SigningGroupID__c</fullName>
        <label>Signing Group ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>DocuSign Username - email address</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>Docusign Settings</label>
</CustomObject>